--- a/about.html
+++ b/about.html
@@ -8,9 +8,8 @@
 	<title>SHIRIN GHORBANIAN Photography</title>
 
 
-
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -23,21 +22,21 @@
        <div class="topnav" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="">Contact</a>
+            <a href="contact.html">Contact</a>
 
 
         </div> <!--topnav-->
     </div>
 
-		<header>About Me</headr>
+
 
 			<br>
 
 
 		</br>
 
-		<img src="SGheadshot.jpg" alt="" alt="headshot" width="550px"
-		height="700px" />
+		<center><img src="SGheadshot.jpg" alt="" alt="headshot" width="550px"
+		height="700px" /></center>
 
 		<br>
 
@@ -46,7 +45,7 @@
 
 	<p>I'm a photographer based in Louisville, Kentucky who specializes in photographing Food and Product.
 
-I grew up in tehran,Iran,then I moved to U.S. in my 20s and studied photography in Louisville, kentucky.Here I was lucky enough to meet a number of amazing teachers who opened my eyes to the world of art and design.this would alter the path of my life in more ways than I could ever imagine.
+I grew up in Tehran,Iran,then I moved to U.S. in my 20s and studied photography in Louisville,kentucky.Here I was lucky enough to meet a number of amazing teachers who opened my eyes to the world of art and design.this would alter the path of my life in more ways than I could ever imagine.
 
 </p>
 
