--- a/contact.html
+++ b/contact.html
@@ -8,22 +8,15 @@
 	<title>SHIRIN GHORBANIAN Photography</title>
 
 
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="wrapper">
-
-
 	<header>
-
-
-
-
     <h1>SHIRIN Ghorbanian Photography</h1>
-
 
 
 
@@ -31,64 +24,35 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-<i class="fa fa-shopping-bag " ></i>
+
 
         </div> <!--topnav-->
 
+<!-- START OF FORM -->
 
+<div class="form-container">
+  <form >
+<!--  FORM ACTION will go to a FAKE Thank You page.  -->
+       <p> Message us with any questions, tell us about your favorites. <br>
+<!-- TODO place the closing p tag here -->
 
+       <br>
+       <label>Your Name: <br>
+       <input type="text" id="name" name="name" required></label>
 
+       <label>Email: <br>
+       <input type="email" id="email" name="email" required></label>
 
-   </header>
-    <main>
+       <label>Message: <br>
+       <textarea id="message" required></textarea></label>
 
+       <label id="newsletter"> <input type="checkbox" class="cursor" id="news" name="news" checked> Receive our newsletters</label>
 
+       <button type="submit" class="cursor" value="Submit">Submit</button>
 
-
-
-
-    <div class="sneakers">
-
-
-    	<div class="Art1"></div>
-
-
-
-    	    <div class="Art2"></div>
-
-
-
-
-
-    	  <div class="Art3"></div>
-
-
-
-    	<div class="Art4"></div>
-</div>
-
-
-    <br>
-    <br>
-
-
-    <div class="col">
-              <center><h2>Photographer Of Objects</h2>
-							</center>
-							<br>
-
-						</br>
-              <p>Shirin Ghorbanian is a photographer based in Louisville Kentucky focused on partnering with creatives and brands to showcase beautiful and thoughtfully crafted design, product, and space.
-
-
-          </div><!--column-->
-					<br>
-
-				</br>
-
-
-
-
+   </form>
+</div> <!-- END OF CONTAINER DIV -->
+<!-- END OF FORM -->
 
 
 
@@ -107,16 +71,3 @@
             x.className = "topnav";
           }
         }
-
-</script>
-
-
-</main>
-
-</div>
-<!-- warpper -->
-
-
-
-</body>
-</html>
