--- a/about.html
+++ b/about.html
@@ -29,7 +29,10 @@
     </div>
 
 
+</header>
+<div class="wrapper">
 
+</div>
 			<br>
 
 
@@ -73,11 +76,12 @@ I grew up in Tehran,Iran,then I moved to U.S. in my 20s and studied photography 
             x.className = "topnav";
           }
         }
+				</script>
 
 
 
 
 
-    </main>
+
 </body>
 </html>
