--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,13 @@
 </div> <!-- END OF CONTAINER DIV -->
 <!-- END OF FORM -->
 
+<!-- map starts here! -->
+
+<div class="map">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3133.1448701391378!2d-85.73986668466854!3d38.25294597967511!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886911f3d3d0d73d%3A0x3846e6e564f42ac9!2sGary%20Barragan%20Photography!5e0!3m2!1sen!2sus!4v1637095588086!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
+
 
 
 
